Add refactor + Bug Fix